--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Home
 description: Aya jang lumpat, eweuh jang najong
+image: https://source.unsplash.com/PAe2UhGo-S4
 ---
 
 <div>
