--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 description: Aya jang lumpat, eweuh jang najong
-image: https://source.unsplash.com/PAe2UhGo-S4
+image: assets/img/IMG-20220102-WA0027.jpg
 ---
 
 <div>
