--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Home
+title: TESA FC
 description: Aya jang lumpat, eweuh jang najong
 image: assets/img/IMG-20220102-WA0027.jpg
 ---
