--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: TESA FC
 description: Aya jang lumpat, eweuh jang najong
-image: assets/img/IMG-20220102-WA0027.jpg
+image: assets/img/logo-1.png
 ---
 
 <div>
