--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ image: assets/img/logo-1.png
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
     <div class="col-md-5 p-lg-5 mx-auto my-5">
       <h1 class="display-4 fw-normal">Partner</h1>
+      <img src="{{ assets/img/POK.png | relative_url }}">
       <a class="btn btn-outline-secondary" href="#">Support us</a>
     </div>
   </div>
