--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ image: assets/img/logo-1.png
       <h1 class="display-4 fw-normal">Partner</h1>
       <img src="{{ 'assets/img/POK.png' | relative_url }}" class="img-fluid pb-2">
       <img src="{{ 'assets/img/yeni-sembako.png' | relative_url }}" class="img-fluid">
+      <img src="{{ 'assets/img/redline.png' | relative_url }}" class="img-fluid"
     </div>
   </div>
 </div>
