--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ image: assets/img/logo-1.png
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
     <div class="col-md-5 p-lg-5 mx-auto my-5">
       <h1 class="display-4">Partner</h1>
-      <img src="{{ 'assets/img/POK.png' | relative_url }}" class="img-fluid pb-2">
-      <img src="{{ 'assets/img/yeni-sembako.png' | relative_url }}" class="img-fluid">
+      <img src="{{ 'assets/img/POK.png' | relative_url }}" class="img-fluid">
+      <img src="{{ 'assets/img/yeni-sembako.png' | relative_url }}" class="img-fluid py-4">
       <img src="{{ 'assets/img/redline.png' | relative_url }}" class="img-fluid"
     </div>
   </div>
