--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@ image: assets/img/logo-1.png
 <div>
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
     <div class="col-md-5 p-lg-5 mx-auto my-5">
-      <h1 class="display-4 fw-normal">Punny headline</h1>
-      <p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
-      <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+      <h1 class="display-4 fw-normal">TESA FOOTBALL CLUB</h1>
+      <p class="lead fw-normal">Aya jang lumpat, eweuh jang najong.</p>
     </div>
-    <div class="product-device shadow-sm d-none d-md-block"></div>
-    <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
   </div>
   
   <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
