--- a/team.html
+++ b/team.html
@@ -3,3 +3,12 @@ layout: page
 title: Team
 image: https://source.unsplash.com/LSOTmGcdaKQ
 ---
+
+<div>
+  {% for player in site.data.team %}
+  <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+    <div>{{ player.name }}</div>
+    <div>{{ player.no-punggung }}</div>
+  </div>
+  {% endfor %}
+</div>
