--- a/team.html
+++ b/team.html
@@ -1,13 +1,13 @@
 ---
 layout: page
-title: Teams
+title: Team
 image: https://source.unsplash.com/LSOTmGcdaKQ
 ---
 
 <div class="container-fluid">
   <div class="row">
-    {% for player in site.data.team %}
     <div class="col-2 col-md-3">
+      {% for player in site.data.team %}
       <div class="card bg-dark text-white">
         <img src="{{ page.image }}" class="card-img">
         <div class="card-img-overlay">
@@ -17,7 +17,7 @@ image: https://source.unsplash.com/LSOTmGcdaKQ
           </div>
         </div>
       </div>
+      {% endfor %}
     </div>
-    {% endfor %}
   </div>
 </div>
