--- a/team.html
+++ b/team.html
@@ -5,9 +5,9 @@ image: https://source.unsplash.com/LSOTmGcdaKQ
 ---
 
 <div class="container-fluid">
-  <div class="row">
+  <div class="row g-0">
     {% for player in site.data.team %}
-    <div class="col-md-3">
+    <div class="col-2">
       <div class="card">
         <div class="card-body">
           <div class="card-text">{{ player.name }}</div>
