--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@ image: https://source.unsplash.com/LSOTmGcdaKQ
 <div class="container-fluid">
   <div class="row g-0">
     {% for player in site.data.team %}
-    <div class="col-2">
+    <div class="col-6 col-md-4">
       <div class="card">
         <div class="card-body">
           <div class="card-text">{{ player.name }}</div>
