--- a/team.html
+++ b/team.html
@@ -5,11 +5,11 @@ image: https://source.unsplash.com/LSOTmGcdaKQ
 ---
 
 <div class="container-fluid">
-  <div class="row row-cols-1 row-cols-md-2 g-0">
+  <div class="row row-cols-2 g-0">
     {% for player in site.data.team %}
     <div class="col">
       <div class="card h-100 rounded-0">
-        <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img-top">
+        <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img-top rounded-0">
         <div class="card-body">
           <div class="card-text">{{ player.name }}</div>
           <div class="card-text">{{ player.no-punggung }}</div>
