--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@ description: Aya jang lumpat, eweuh jang najong
 image: assets/img/logo-1.png
 ---
 
+<div class="row row-cols-3">
+  <div class="col">
+    <img src="{{ 'assets/img/POK.png' | relative_url }}" class="img-fluid">
+  </div>
+  <div class="col">
+    <img src="{{ 'assets/img/yeni-sembako.png' | relative_url }}" class="img-fluid">
+  </div>
+  <div class="col">
+    <img src="{{ 'assets/img/redline.png' | relative_url }}" class="img-fluid">
+  </div>
+</div>
+
+<!-- disabled
 <div>
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
     <div class="col-md-5 p-lg-5 mx-auto my-5">
@@ -39,3 +52,5 @@ image: assets/img/logo-1.png
     </div>
   </div>
 </div>
+
+-->
