--- a/team.html
+++ b/team.html
@@ -4,14 +4,14 @@ title: Team
 image: https://source.unsplash.com/LSOTmGcdaKQ
 ---
 
-<div class="container-fluid">
+<div class="container my-3">
   <div class="row row-cols-2 row-cols-md-3 g-2">
     {% for player in site.data.team %}
     <div class="col">
       <div class="card h-100 rounded-0">
         <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img-top rounded-0">
         <div class="card-body">
-          <div class="card-text card-title">{{ player.name }}</div>
+          <h3 class="card-title">{{ player.name }}</h3>
           <div class="card-text">{{ player.no-punggung }}</div>
         </div>
       </div>
