--- a/team.html
+++ b/team.html
@@ -11,8 +11,8 @@ image: https://source.unsplash.com/LSOTmGcdaKQ
       <div class="card h-100 rounded-0">
         <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img-top rounded-0">
         <div class="card-body">
-          <h3 class="card-title">{{ player.name }}</h3>
-          <div class="card-text">{{ player.no-punggung }}</div>
+          <h4 class="card-title text-center">{{ player.name }}</h4>
+          <p class="card-text text-center fs-5 fw-bold">{{ player.no-punggung }}</p>
         </div>
       </div>
     </div>
