--- a/team.html
+++ b/team.html
@@ -4,7 +4,7 @@ title: Team
 image: https://source.unsplash.com/LSOTmGcdaKQ
 ---
 
-<div class="container my-3">
+<div class="container my-5">
   <div class="row row-cols-2 row-cols-md-3 g-2">
     {% for player in site.data.team %}
     <div class="col">
@@ -12,7 +12,7 @@ image: https://source.unsplash.com/LSOTmGcdaKQ
         <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img-top rounded-0">
         <div class="card-body">
           <h4 class="card-title text-center">{{ player.name }}</h4>
-          <p class="card-text text-center fs-5 fw-bold">{{ player.no-punggung }}</p>
+          <p class="card-text text-center fs-1">{{ player.no-punggung }}</p>
         </div>
       </div>
     </div>
