--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: Aya jang lumpat, eweuh jang najong
 image: assets/img/logo-1.png
 ---
 
-<div class="container-fluid mt-5">
+<div class="container mt-5">
   <div class="row row-cols-3">
     <div class="col">
       <img src="{{ 'assets/img/POK.png' | relative_url }}" class="img-fluid">
