--- a/team.html
+++ b/team.html
@@ -4,8 +4,8 @@ title: Team
 image: https://source.unsplash.com/LSOTmGcdaKQ
 ---
 
-<div class="container my-5">
-  <div class="row row-cols-2 row-cols-md-3 g-2">
+<div class="container px-0">
+  <div class="row row-cols-2 row-cols-md-3 g-0">
     {% for player in site.data.team %}
     <div class="col">
       <div class="card h-100 rounded-0">
