--- a/team.html
+++ b/team.html
@@ -4,15 +4,15 @@ title: Team
 image: https://source.unsplash.com/LSOTmGcdaKQ
 ---
 
-<div class="container px-0">
+<div class="container-fluid px-0">
   <div class="row row-cols-2 row-cols-md-3 g-0">
     {% for player in site.data.team %}
     <div class="col">
       <div class="card h-100 rounded-0">
         <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img-top rounded-0">
         <div class="card-body">
-          <h4 class="card-title text-center">{{ player.name }}</h4>
-          <p class="card-text text-center fs-1">{{ player.no-punggung }}</p>
+          <h5 class="card-title text-center">{{ player.name }}</h5>
+          <p class="card-text text-center fs-1 fw-bold">{{ player.no-punggung }}</p>
         </div>
       </div>
     </div>
