--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@ image: https://source.unsplash.com/LSOTmGcdaKQ
         <img src="https://source.unsplash.com/random/400×300" class="card-img-top rounded-0">
         <div class="card-body">
           <h5 class="card-title text-center">{{ player.name }}</h5>
-          <p class="card-text text-center fs-1 fw-bold">{{ player.no-punggung }}</p>
+          <p class="card-text text-center fs-1">{{ player.no-punggung }}</p>
         </div>
       </div>
     </div>
