--- a/team.html
+++ b/team.html
@@ -5,13 +5,13 @@ image: https://source.unsplash.com/LSOTmGcdaKQ
 ---
 
 <div class="container-fluid px-0">
-  <div class="row row-cols-2 row-cols-md-3 g-2">
+  <div class="row row-cols-2 row-cols-md-3 g-0">
     {% for player in site.data.team %}
     <div class="col">
       <div class="card h-100 rounded-0">
         <img src="https://source.unsplash.com/random/300×200" class="card-img-top rounded-0">
         <div class="card-body">
-          <h5 class="card-title text-center">{{ player.name }}</h5>
+          <h5 class="card-title text-center text-uppercase">{{ player.name }}</h5>
           <p class="card-text text-center fs-1">{{ player.no-punggung }}</p>
         </div>
       </div>
