--- a/gallery.html
+++ b/gallery.html
@@ -2,3 +2,11 @@
 layout: page
 title: Gallery
 ---
+
+<div class="container-fluid">
+  <div class="row row-cols-2 row-cols-md-3 g-0" data-masonry='{"percentPosition": true }'>
+    <div class="col">
+      <img src="https://source.unsplash.com/random" class="rounded-0">
+    </div>
+  </div>
+</div>
