--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,19 @@ title: Gallery
 <div class="container-fluid">
   <div class="row row-cols-2 row-cols-md-3 g-0" data-masonry='{"percentPosition": true }'>
     <div class="col">
-      <img src="https://source.unsplash.com/random" class="rounded-0">
+      <img src="https://source.unsplash.com/random" class="rounded-0 img-fluid">
+    </div>
+    <div class="col">
+      <img src="https://source.unsplash.com/random" class="rounded-0 img-fluid">
+    </div>
+    <div class="col">
+      <img src="https://source.unsplash.com/random" class="rounded-0 img-fluid">
+    </div>
+    <div class="col">
+      <img src="https://source.unsplash.com/random" class="rounded-0 img-fluid">
+    </div>
+    <div class="col">
+      <img src="https://source.unsplash.com/random" class="rounded-0 img-fluid">
     </div>
   </div>
 </div>
