--- a/gallery.html
+++ b/gallery.html
@@ -6,19 +6,29 @@ title: Gallery
 <div class="container-fluid">
   <div class="row row-cols-2 row-cols-md-3 g-2" data-masonry='{"percentPosition": true }'>
     <div class="col">
-      <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0">
+      <div class="card">
+        <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0">
+      </div>
     </div>
     <div class="col">
-      <img src="https://source.unsplash.com/BOVkO5Uq780" class="rounded-0">
+      <div class="card">
+        <img src="https://source.unsplash.com/BOVkO5Uq780" class="rounded-0">
+      </div>
     </div>
     <div class="col">
-      <img src="https://source.unsplash.com/148Cw9KDJsI" class="rounded-0">
+      <div class="card">
+        <img src="https://source.unsplash.com/148Cw9KDJsI" class="rounded-0">
+      </div>
     </div>
     <div class="col">
-      <img src="https://source.unsplash.com/8ldqRkOk5oo" class="rounded-0">
+      <div class="card">
+        <img src="https://source.unsplash.com/8ldqRkOk5oo" class="rounded-0">
+      </div>
     </div>
     <div class="col">
-      <img src="https://source.unsplash.com/random" class="rounded-0">
+      <div class="card">
+        <img src="https://source.unsplash.com/random" class="rounded-0">
+      </div>
     </div>
   </div>
 </div>
