--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@ layout: page
 title: Gallery
 ---
 
-<div class="container-fluid">
+<div class="container-fluid my-5">
   <div class="row row-cols-2 row-cols-md-3 g-2" data-masonry='{"percentPosition": true }'>
     <div class="col">
       <div class="card">
