--- a/gallery.html
+++ b/gallery.html
@@ -3,8 +3,8 @@ layout: page
 title: Gallery
 ---
 
-<div class="container-fluid my-5">
-  <div class="row row-cols-2 row-cols-md-3 g-2" data-masonry='{"percentPosition": true }'>
+<div class="container-fluid">
+  <div class="row row-cols-2 g-2" data-masonry='{"percentPosition": true }'>
     <div class="col">
       <div class="card">
         <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0">
