--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@ title: Gallery
 ---
 
 <div class="container-fluid">
-  <div class="row row-cols-2 g-2" data-masonry='{"percentPosition": true }'>
+  <div class="row row-cols-2 g-2 clearfix" data-masonry='{"percentPosition": true }'>
     <div class="col">
       <div class="card">
         <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0">
