--- a/gallery.html
+++ b/gallery.html
@@ -4,30 +4,30 @@ title: Gallery
 ---
 
 <div class="container-fluid">
-  <div class="row row-cols-2 g-2" data-masonry='{"percentPosition": true }'>
+  <div class="row row-cols-2 row-cols-md-3 g-2" data-masonry='{"percentPosition": true }'>
     <div class="col">
       <div class="card">
-        <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img rounded-0">
+        <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img rounded-0 img-fluid">
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://source.unsplash.com/BOVkO5Uq780" class="card-img rounded-0">
+        <img src="https://source.unsplash.com/BOVkO5Uq780" class="card-img rounded-0 img-fluid">
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://source.unsplash.com/148Cw9KDJsI" class="card-img rounded-0">
+        <img src="https://source.unsplash.com/148Cw9KDJsI" class="card-img rounded-0 img-fluid">
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://source.unsplash.com/8ldqRkOk5oo" class="card-img rounded-0">
+        <img src="https://source.unsplash.com/8ldqRkOk5oo" class="card-img rounded-0 img-fluid">
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://source.unsplash.com/random" class="card-img rounded-0">
+        <img src="https://source.unsplash.com/random" class="card-img rounded-0 img-fluid">
       </div>
     </div>
   </div>
