--- a/gallery.html
+++ b/gallery.html
@@ -3,31 +3,31 @@ layout: page
 title: Gallery
 ---
 
-<div class="container-fluid clearfix">
-  <div class="row row-cols-2 row-cols-md-3 g-2 clearfix" data-masonry='{"percentPosition": true }'>
-    <div class="col">
+<div class="container-fluid">
+  <div class="row" data-masonry='{"percentPosition": true }'>
+    <div class="col-sm-6 col-md-4">
       <div class="card">
-        <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img rounded-0 img-fluid">
+        <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img rounded-0">
       </div>
     </div>
-    <div class="col">
+    <div class="col-sm-6 col-md-4">
       <div class="card">
-        <img src="https://source.unsplash.com/BOVkO5Uq780" class="card-img rounded-0 img-fluid">
+        <img src="https://source.unsplash.com/BOVkO5Uq780" class="card-img rounded-0">
       </div>
     </div>
-    <div class="col">
+    <div class="col-sm-6 col-md-4">
       <div class="card">
-        <img src="https://source.unsplash.com/148Cw9KDJsI" class="card-img rounded-0 img-fluid">
+        <img src="https://source.unsplash.com/148Cw9KDJsI" class="card-img rounded-0">
       </div>
     </div>
-    <div class="col">
+    <div class="col-sm-6 col-md-4">
       <div class="card">
-        <img src="https://source.unsplash.com/8ldqRkOk5oo" class="card-img rounded-0 img-fluid">
+        <img src="https://source.unsplash.com/8ldqRkOk5oo" class="card-img rounded-0">
       </div>
     </div>
-    <div class="col">
+    <div class="col-sm-6 col-md-4">
       <div class="card">
-        <img src="https://source.unsplash.com/random" class="card-img rounded-0 img-fluid">
+        <img src="https://source.unsplash.com/random" class="card-img rounded-0">
       </div>
     </div>
   </div>
