--- a/gallery.html
+++ b/gallery.html
@@ -4,29 +4,29 @@ title: Gallery
 ---
 
 <div class="container-fluid">
-  <div class="row" data-masonry='{"percentPosition": true }'>
-    <div class="col-6 col-md-4">
-      <div class="card">
+  <div class="row row-cols-2 g-2" id="masonry">
+    <div class="col">
+      <div class="card masonry-item">
         <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img rounded-0">
       </div>
     </div>
-    <div class="col-6 col-md-4">
-      <div class="card">
+    <div class="col">
+      <div class="card masonry-item">
         <img src="https://source.unsplash.com/BOVkO5Uq780" class="card-img rounded-0">
       </div>
     </div>
-    <div class="col-6 col-md-4">
-      <div class="card">
+    <div class="col">
+      <div class="card masonry-item">
         <img src="https://source.unsplash.com/148Cw9KDJsI" class="card-img rounded-0">
       </div>
     </div>
-    <div class="col-6 col-md-4">
-      <div class="card">
+    <div class="col">
+      <div class="card masonry-item">
         <img src="https://source.unsplash.com/8ldqRkOk5oo" class="card-img rounded-0">
       </div>
     </div>
-    <div class="col-6 col-md-4">
-      <div class="card">
+    <div class="col">
+      <div class="card masonry-item">
         <img src="https://source.unsplash.com/random" class="card-img rounded-0">
       </div>
     </div>
