--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@ title: Gallery
 ---
 
 <div class="container-fluid">
-  <div class="row row-cols-2 g-2" id="masonry">
+  <div class="row row-cols-2 row-cols-md-3 g-2" id="masonry">
     <div class="col">
       <div class="card masonry-item">
         <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img rounded-0">
@@ -12,7 +12,7 @@ title: Gallery
     </div>
     <div class="col">
       <div class="card masonry-item">
-        <img src="https://source.unsplash.com/BOVkO5Uq780" class="card-img rounded-0">
+        <img src="https://source.unsplash.com/NMRtFGPkGng" class="card-img rounded-0">
       </div>
     </div>
     <div class="col">
