--- a/gallery.html
+++ b/gallery.html
@@ -7,27 +7,27 @@ title: Gallery
   <div class="row row-cols-2 row-cols-md-3 g-2" id="masonry">
     <div class="col">
       <div class="card masonry-item">
-        <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img rounded-0">
+        <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0">
       </div>
     </div>
     <div class="col">
       <div class="card masonry-item">
-        <img src="https://source.unsplash.com/NMRtFGPkGng" class="card-img rounded-0">
+        <img src="https://source.unsplash.com/NMRtFGPkGng" class="rounded-0">
       </div>
     </div>
     <div class="col">
       <div class="card masonry-item">
-        <img src="https://source.unsplash.com/148Cw9KDJsI" class="card-img rounded-0">
+        <img src="https://source.unsplash.com/148Cw9KDJsI" class="rounded-0">
       </div>
     </div>
     <div class="col">
       <div class="card masonry-item">
-        <img src="https://source.unsplash.com/8ldqRkOk5oo" class="card-img rounded-0">
+        <img src="https://source.unsplash.com/8ldqRkOk5oo" class="rounded-0">
       </div>
     </div>
     <div class="col">
       <div class="card masonry-item">
-        <img src="https://source.unsplash.com/random" class="card-img rounded-0">
+        <img src="https://source.unsplash.com/random" class="rounded-0">
       </div>
     </div>
   </div>
