--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@ title: Gallery
 ---
 
 <div class="container-fluid">
-  <div class="row row-cols-2 row-cols-md-3 g-2" id="masonry">
+  <div class="row row-cols-2 row-cols-md-4 g-2" id="masonry" data-masonry="{'percentPosition': true }">
     <div class="col">
       <div class="card masonry-item">
         <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0">
