--- a/gallery.html
+++ b/gallery.html
@@ -4,28 +4,28 @@ title: Gallery
 ---
 
 <div class="container-fluid">
-  <div class="row row-cols-2 row-cols-md-4 g-2" id="masonry" data-masonry="{'percentPosition': true }">
-    <div class="col">
+  <div class="row g-2" id="masonry" data-masonry="{'percentPosition': true }">
+    <div class="col-6">
       <div class="card masonry-item">
         <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0">
       </div>
     </div>
-    <div class="col">
+    <div class="col-6">
       <div class="card masonry-item">
         <img src="https://source.unsplash.com/NMRtFGPkGng" class="rounded-0">
       </div>
     </div>
-    <div class="col">
+    <div class="col-6">
       <div class="card masonry-item">
         <img src="https://source.unsplash.com/148Cw9KDJsI" class="rounded-0">
       </div>
     </div>
-    <div class="col">
+    <div class="col-6">
       <div class="card masonry-item">
         <img src="https://source.unsplash.com/8ldqRkOk5oo" class="rounded-0">
       </div>
     </div>
-    <div class="col">
+    <div class="col-6">
       <div class="card masonry-item">
         <img src="https://source.unsplash.com/random" class="rounded-0">
       </div>
