--- a/gallery.html
+++ b/gallery.html
@@ -6,28 +6,28 @@ title: Gallery
 <div class="container-fluid">
   <div class="row g-2" id="masonry" data-masonry="{'percentPosition': true }">
     <div class="col-6">
-      <div class="card masonry-item">
-        <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0">
+      <div class="card">
+        <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="masonry-item rounded-0">
       </div>
     </div>
     <div class="col-6">
-      <div class="card masonry-item">
-        <img src="https://source.unsplash.com/NMRtFGPkGng" class="rounded-0">
+      <div class="card">
+        <img src="https://source.unsplash.com/NMRtFGPkGng" class="masonry-item rounded-0">
       </div>
     </div>
     <div class="col-6">
-      <div class="card masonry-item">
-        <img src="https://source.unsplash.com/148Cw9KDJsI" class="rounded-0">
+      <div class="card">
+        <img src="https://source.unsplash.com/148Cw9KDJsI" class="masonry-item rounded-0">
       </div>
     </div>
     <div class="col-6">
-      <div class="card masonry-item">
-        <img src="https://source.unsplash.com/8ldqRkOk5oo" class="rounded-0">
+      <div class="card">
+        <img src="https://source.unsplash.com/8ldqRkOk5oo" class="masonry-item rounded-0">
       </div>
     </div>
     <div class="col-6">
-      <div class="card masonry-item">
-        <img src="https://source.unsplash.com/random" class="rounded-0">
+      <div class="card">
+        <img src="https://source.unsplash.com/random" class="masonry-item rounded-0">
       </div>
     </div>
   </div>
