--- a/gallery.html
+++ b/gallery.html
@@ -30,5 +30,15 @@ title: Gallery
         <img src="https://source.unsplash.com/random" class="masonry-item rounded-0">
       </div>
     </div>
+    <div class="col-6">
+      <div class="card">
+        <img src="https://source.unsplash.com/NMRtFGPkGng" class="masonry-item rounded-0">
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="card">
+        <img src="https://source.unsplash.com/NMRtFGPkGng" class="masonry-item rounded-0">
+      </div>
+    </div>
   </div>
 </div>
