--- a/gallery.html
+++ b/gallery.html
@@ -4,25 +4,25 @@ title: Gallery
 ---
 
 <div class="container-fluid">
-  <div class="row g-2" id="masonry" data-masonry="{'percentPosition': true }">
-    <div class="col-6">
-      <div class="card">
-        <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="masonry-item rounded-0 img-fluid">
+  <div class="row masonry g-2">
+    <div class="col-6 col-md-4">
+      <div class="masonry-item">
+        <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0 img-fluid">
       </div>
     </div>
-    <div class="col-6">
-      <div class="card">
-        <img src="https://source.unsplash.com/NMRtFGPkGng" class="masonry-item rounded-0 img-fluid">
+    <div class="col-6 col-md-4">
+      <div class="masonry-item">
+        <img src="https://source.unsplash.com/NMRtFGPkGng" class="rounded-0 img-fluid">
       </div>
     </div>
-    <div class="col-6">
-      <div class="card">
-        <img src="https://source.unsplash.com/148Cw9KDJsI" class="masonry-item rounded-0 img-fluid">
+    <div class="col-6 col-md-4">
+      <div class="masonry-item">
+        <img src="https://source.unsplash.com/148Cw9KDJsI" class="rounded-0 img-fluid">
       </div>
     </div>
-    <div class="col-6">
-      <div class="card">
-        <img src="https://source.unsplash.com/8ldqRkOk5oo" class="masonry-item rounded-0 img-fluid">
+    <div class="col-6 col-md-4">
+      <div class="masonry-item">
+        <img src="https://source.unsplash.com/8ldqRkOk5oo" class="rounded-0 img-fluid">
       </div>
     </div>
   </div>
