--- a/gallery.html
+++ b/gallery.html
@@ -4,23 +4,23 @@ title: Gallery
 ---
 
 <div class="container-fluid">
-  <div class="row masonry g-2">
-    <div class="col-6 col-md-4">
+  <div class="row masonry row-cols-2 row-cols-md-3 g-2">
+    <div class="col">
       <div class="masonry-item">
         <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0 img-fluid">
       </div>
     </div>
-    <div class="col-6 col-md-4">
+    <div class="col">
       <div class="masonry-item">
         <img src="https://source.unsplash.com/NMRtFGPkGng" class="rounded-0 img-fluid">
       </div>
     </div>
-    <div class="col-6 col-md-4">
+    <div class="col">
       <div class="masonry-item">
         <img src="https://source.unsplash.com/148Cw9KDJsI" class="rounded-0 img-fluid">
       </div>
     </div>
-    <div class="col-6 col-md-4">
+    <div class="col">
       <div class="masonry-item">
         <img src="https://source.unsplash.com/8ldqRkOk5oo" class="rounded-0 img-fluid">
       </div>
