--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@ title: Gallery
 ---
 
 <div class="container-fluid">
-  <div class="row masonry row-cols-2 row-cols-md-3 g-2">
+  <div class="row masonry row-cols-2 row-cols-md-3">
     <div class="col">
       <div class="masonry-item">
         <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0 img-fluid">
