--- a/gallery.html
+++ b/gallery.html
@@ -5,25 +5,25 @@ title: Gallery
 
 
 <div class="row" data-masonry='{"percentPosition": true }'>
-  <div class="col-6 col-md-4 mb-4">
+  <div class="col-6 col-md-4">
     <div class="card">
-      <svg class="bd-placeholder-img card-img" width="100%" height="260" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Card image" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Card image</text></svg>
-
+      <img src="https://source.unsplash.com/random" class="card-img rounded-0">
+    </div>
   </div>
-  <div class="col-6 col-md-4 mb-4">
+  <div class="col-6 col-md-4">
     <div class="card">
-      <svg class="bd-placeholder-img card-img" width="100%" height="260" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Card image" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Card image</text></svg>
-
+      <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img rounded-0">
+    </div>
   </div>
-  <div class="col-6 col-md-4 mb-4">
+  <div class="col-6 col-md-4">
     <div class="card">
-      <svg class="bd-placeholder-img card-img" width="100%" height="260" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Card image" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Card image</text></svg>
-
+      <img src="https://source.unsplash.com/NMRtFGPkGng" class="card-img rounded-0">
+    </div>
   </div>
-  <div class="col-6 col-md-4 mb-4">
+  <div class="col-6 col-md-4">
     <div class="card">
-      <svg class="bd-placeholder-img card-img" width="100%" height="260" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Card image" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Card image</text></svg>
-
+      <img src="https://source.unsplash.com/148Cw9KDJsI" class="card-img rounded-0">
+    </div>
   </div>
 </div>
 
