--- a/gallery.html
+++ b/gallery.html
@@ -4,24 +4,24 @@ title: Gallery
 ---
 
 
-<div class="row" data-masonry='{"percentPosition": true }'>
+<div class="row masonry" data-masonry='{"percentPosition": true }'>
   <div class="col-6 col-md-4">
-    <div class="card">
+    <div class="card masonry-item">
       <img src="https://source.unsplash.com/random" class="card-img rounded-0">
     </div>
   </div>
   <div class="col-6 col-md-4">
-    <div class="card">
+    <div class="card masonry-item">
       <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img rounded-0">
     </div>
   </div>
   <div class="col-6 col-md-4">
-    <div class="card">
+    <div class="card masonry-item">
       <img src="https://source.unsplash.com/NMRtFGPkGng" class="card-img rounded-0">
     </div>
   </div>
   <div class="col-6 col-md-4">
-    <div class="card">
+    <div class="card masonry-item">
       <img src="https://source.unsplash.com/148Cw9KDJsI" class="card-img rounded-0">
     </div>
   </div>
