--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@ title: Gallery
 ---
 
 
-<div class="row masonry" data-masonry='{"percentPosition": true }'>
+<div class="row masonry">
   <div class="col-6 col-md-4">
     <div class="card masonry-item">
       <img src="https://source.unsplash.com/random" class="card-img rounded-0">
