--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@ layout: page
 title: Gallery
 ---
 
-
+<div class="container-fluid masonry">
 <div class="row masonry">
   <div class="col-6 col-md-4">
     <div class="card masonry-item">
@@ -25,6 +25,7 @@ title: Gallery
       <img src="https://source.unsplash.com/148Cw9KDJsI" class="card-img rounded-0">
     </div>
   </div>
+</div>
 </div>
 
 <!--
