--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@ title: Gallery
 ---
 
 <div class="container-fluid masonry">
-<div class="row masonry">
+<div class="row g-2">
   <div class="col-6 col-md-4">
     <div class="card masonry-item">
       <img src="https://source.unsplash.com/random" class="card-img rounded-0">
