--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@ image: https://source.unsplash.com/LSOTmGcdaKQ
   <div class="row row-cols-2 row-cols-md-3 g-0">
     {% for player in site.data.team %}
     <div class="col">
-      <div class="card h-100 rounded-0">
+      <div class="card rounded-0">
         <div class="ratio ratio-1x1">
         <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0">
         </div>
