--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@ title: Gallery
 <div class="row clearfix g-2" data-masonry='{"percentPosition": true }'>
   <div class="col-6 col-md-4">
     <div class="card">
-      <img src="https://source.unsplash.com/random" class="card-img rounded-0">
+      <img src="https://source.unsplash.com/random" class="w-100 h-100 rounded-0">
     </div>
   </div>
   <div class="col-6 col-md-4">
