--- a/gallery.html
+++ b/gallery.html
@@ -12,22 +12,22 @@ title: Gallery
   </div>
   <div class="col-6 col-md-4">
     <div class="card">
-      <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="card-img rounded-0">
+      <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="w-100 h-100 rounded-0">
     </div>
   </div>
   <div class="col-6 col-md-4">
     <div class="card">
-      <img src="https://source.unsplash.com/NMRtFGPkGng" class="card-img rounded-0">
+      <img src="https://source.unsplash.com/NMRtFGPkGng" class="w-100 h-100 rounded-0">
     </div>
   </div>
   <div class="col-6 col-md-4">
     <div class="card">
-      <img src="https://source.unsplash.com/148Cw9KDJsI" class="card-img rounded-0">
+      <img src="https://source.unsplash.com/148Cw9KDJsI" class="w-100 h-100 rounded-0">
     </div>
   </div>
   <div class="col-6 col-md-4">
     <div class="card">
-      <img src="https://source.unsplash.com/random" class="card-img rounded-0">
+      <img src="https://source.unsplash.com/random" class="w-100 h-100 rounded-0">
     </div>
   </div>
 </div>
