--- a/team.html
+++ b/team.html
@@ -10,9 +10,9 @@ image: /assets/img/tesafc_full-team.jpg
     <div class="col">
       <div class="card rounded-0">
         {% if player.pp %}
-          <img src="{{ player.pp }}" class="rounded-0" style="width:200;height:300;">
+          <img src="{{ player.pp }}" class="rounded-0 ratio ratio-1x1">
           {% else %}
-          <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0" style="width:200;height:300;">
+          <img src="https://source.unsplash.com/N2IJ31xZ_ks" class="rounded-0 ratio ratio-1x1">
         {% endif %}
         <div class="card-body">
           <h5 class="card-title text-center text-uppercase">{{ player.name }}</h5>
