--- a/team.html
+++ b/team.html
@@ -15,7 +15,7 @@ image: /assets/img/tesafc_full-team.jpg
           <img src="/assets/img/tesafc.png" class="rounded-0">
         {% endif %}
         <div class="card-body">
-          <h5 class="card-title text-center text-uppercase">{{ player.name }}</h5>
+          <h5 class="card-title text-center text-uppercase text-break">{{ player.name }}</h5>
           <p class="card-text text-center fs-1">{{ player.no-punggung }}</p>
         </div>
       </div>
