--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@ image: /assets/img/tesafc_full-team.jpg
         {% if player.pp %}
           <img src="{{ player.pp }}" class="rounded-0">
           {% else %}
-          <img src="/assets/img/tesafc.png" class="rounded-0">
+          <img src="/assets/img/default-pp.jpg" class="rounded-0">
         {% endif %}
         <div class="card-body">
           <h5 class="card-title text-center text-uppercase text-break">{{ player.name }}</h5>
