--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@ image: /assets/img/logo-1.png
 
 <div class="container-fluid px-0">
   <div class="row row-cols-2 row-cols-md-3 g-0">
-    {% for player in site.data.team %}
+    {% for player in site.data.team | group_by:"role" %}
     <div class="col">
       <div class="card rounded-0 h-100">
         {% if player.pp %}
