--- a/team.html
+++ b/team.html
@@ -7,8 +7,7 @@ image: /assets/img/logo-1.png
 <div class="container-fluid px-0">
   <div class="row row-cols-2 row-cols-md-3 g-0">
     {% assign player-by-role = site.data.team | sort:"role" %}
-    <h5>{{ player.role }}</h5>
-    {% for player in player-by-role %}
+    {% for player in player-by-role('goalkeeper') %}
     <div class="col">
       <div class="card rounded-0 h-100">
         {% if player.pp %}
