--- a/team.html
+++ b/team.html
@@ -6,8 +6,10 @@ image: /assets/img/logo-1.png
 
 <div class="container-fluid px-0">
   <div class="row row-cols-2 row-cols-md-3 g-0">
-    {% assign player-by-role = site.data.team | sort:"role" %}
-    {% for player in player-by-role('goalkeeper') %}
+    {% assign roles = site.data.team | group_by:"role" %}
+    {% for role in roles %}
+      <h5>{{ role.name }}</h5>
+      {% for player in role.items %}
     <div class="col">
       <div class="card rounded-0 h-100">
         {% if player.pp %}
@@ -21,6 +23,7 @@ image: /assets/img/logo-1.png
         </div>
       </div>
     </div>
+       {% endfor %}
     {% endfor %}
   </div>
 </div>
