--- a/team.html
+++ b/team.html
@@ -5,10 +5,10 @@ image: /assets/img/logo-1.png
 ---
 
 <div class="container-fluid px-0">
-  <div class="row row-cols-2 row-cols-md-3 g-0">
     {% assign roles = site.data.team | group_by:"role" %}
     {% for role in roles %}
-      <h5>{{ role.name }}</h5>
+      <h3 class="text-uppercase">{{ role.name }}</h3>
+  <div class="row row-cols-2 row-cols-md-3 g-0">
       {% for player in role.items %}
     <div class="col">
       <div class="card rounded-0 h-100">
