--- a/team.html
+++ b/team.html
@@ -4,7 +4,7 @@ title: Team
 image: /assets/img/logo-1.png
 ---
 
-<div class="container-fluid px-0">
+<div class="container-fluid px-0 bg-light">
   <div class="row row-cols-2 row-cols-md-3 g-0">
     {% assign roles = site.data.team | group_by:"role" %}
     {% for role in roles %}
