--- a/matches.html
+++ b/matches.html
@@ -15,7 +15,7 @@ image: /assets/img/logo-4.png
         <div class="card rounded-0">
           <div class="card-body py-5">
             <p class="card-text text-center text-uppercase fw-bolder p-0"><small>{{ item.competition }}</small></p>
-            <p class="card-text text-center text-capitalize">{{ item.date | date_to_long_string }}</p>
+            <p class="card-text text-center text-capitalize">{{ item.date }}</p>
             <div class="d-flex align-items-center justify-content-between py-5">
               <div class="text-center text-uppercase fw-bolder">{{ item.home }}</div>
               {% if item.status == "done" %}
