--- a/matches.html
+++ b/matches.html
@@ -25,7 +25,7 @@ image: /assets/img/logo-4.png
               {% endif %}
               <div class="text-center text-uppercase fw-bolder">{{ item.away }}</div>
             </div>-->
-            <div class="row row-cols-3">
+            <div class="row row-cols-3 text-center text-uppercase">
               <div class="col">{{ item.home }}</div>
               {% if item.status == "done" %}
               <div class="col">{{ item.result }}</div>
