--- a/matches.html
+++ b/matches.html
@@ -4,7 +4,7 @@ title: matches
 image: /assets/img/logo-4.png
 ---
 
-<div id="wrap">
+<div class="bg-light">
   <div class="container">
     {% assign matches = site.matches | group_by: "status" %}
     <div class="row row-cols-1 g-0">
