--- a/players.html
+++ b/players.html
@@ -4,7 +4,7 @@ title: Players
 image: /assets/img/logo-2.png
 ---
 
-<div class="container-fluid px-0 bg-dark-text-white">
+<div class="container-fluid px-0 bg-dark text-white">
   <div class="row row-cols-2 row-cols-md-3 g-0">
     {% assign roles = site.data.players | group_by:"role" %}
     {% for role in roles %}
